examples/cilium/boutique-demo/currencyservice_cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: currencyservice
spec:
  endpointSelector:
    matchLabels:
      app: currencyservice
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: frontend
      toPorts:
        - ports:
            - port: "7000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: checkoutservice
      toPorts:
        - ports:
            - port: "7000"
              protocol: TCP
  egress:
    - toEntities:
        - all
