examples/cilium/boutique-demo/deny_all_cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
