examples/cilium/boutique-demo/emailservice_cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: emailservice
spec:
  endpointSelector:
    matchLabels:
      app: emailservice
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: checkoutservice
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEntities:
        - all
