examples/cilium/boutique-demo/loadgenerator_cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loadgenerator
spec:
  endpointSelector:
    matchLabels:
      app: loadgenerator
  egress:
    - toEntities:
        - all
