examples/cilium/boutique-demo/recommendationservice_cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: recommendationservice
spec:
  endpointSelector:
    matchLabels:
      app: recommendationservice
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: frontend
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEntities:
        - all
